Bug 1296322 - X button is vertically misaligned on the permission dropdown. r=dao
MozReview-Commit-ID: LkAhzffsc6g

UltraBlame original commit: ad24787de436bc634cd746d0f953f057db017d44

--- a/browser/themes/shared/controlcenter/panel.inc.css
+++ b/browser/themes/shared/controlcenter/panel.inc.css
@@ -3472,6 +3472,104 @@ popup
 permission
 -
 label
+.
+identity
+-
+popup
+-
+permission
+-
+state
+-
+label
+{
+/
+*
+We
+need
+to
+align
+the
+action
+buttons
+and
+permission
+icons
+with
+the
+text
+.
+This
+is
+tricky
+because
+the
+icon
+height
+is
+defined
+in
+pixels
+while
+the
+font
+height
+can
+vary
+with
+platform
+and
+system
+settings
+and
+at
+least
+on
+Windows
+the
+default
+font
+metrics
+reserve
+more
+extra
+space
+for
+accents
+.
+This
+value
+is
+a
+good
+compromise
+for
+different
+platforms
+and
+font
+sizes
+.
+*
+/
+margin
+-
+top
+:
+-
+0
+.
+1em
+;
+}
+.
+identity
+-
+popup
+-
+permission
+-
+label
 {
 margin
 -
